fixes overlapping styles

--- a/src/styles/expressionData.scss
+++ b/src/styles/expressionData.scss
@@ -1,9 +1,9 @@
 
-.well-sm {
+.ribbon-well-sm {
   padding: 9px;
   border-radius: 3px;
 }
-.well {
+.ribbon-well {
   //width: 100%;
   max-width: 650px;
   padding: 19px;
@@ -14,7 +14,7 @@
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
   box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
 }
-.small, small {
+.ribbon-small {
   font-size: 11.6px;
 }
 
